--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/starlight": "^0.28.3",
     "astro": "^4.15.3",
+    "dayjs": "^1.11.13",
     "sharp": "^0.32.5",
-    "@astrojs/check": "^0.9.4",
     "typescript": "^5.6.3"
   }
 }
